--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -363,7 +363,7 @@
                     <br/>
                 </p>-->
 		<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 5px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center; margin-top: -15%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 5px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		</div> 
         </div>	
