--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -308,7 +308,7 @@
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px; ">
-                                <caption style="margin-top: -1%;">住宿信息</caption>
+                                <caption style="margin-top: -10%;">住宿信息</caption>
                                 <tbody style="width: 73.5%;">
                                 <tr style="">
                                     <td style="width: 10%;">  </td>
@@ -318,7 +318,7 @@
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px;">
-                                <caption style="margin-top: -1%;">会议赞助与合作：</caption>
+                                <caption style="margin-top: -10%;">会议赞助与合作：</caption>
                                 <tbody style="width: 73.5%;">
                                 <tr>
                                     <td style="width: 5%;">  </td>
@@ -328,7 +328,7 @@
                                 </tbody>
                             </table>
 				<div class="footer4 removeborder">
-			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
+			 <p style="text-align:center;margin-top: -10%;"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 			
 		              </div> 
                         </div>
