--- a/CSAC-2018.html
+++ b/CSAC-2018.html
@@ -38,7 +38,7 @@
                            margin-left: 25%;
                            margin-bottom:80px;
                            margin-top:-15%;
-		           margin-bottom: -1%;
+		           margin-bottom: -8%;
                      }     
 	</style>
 </head>
@@ -154,7 +154,7 @@
 						<tr><td style="width: 335px;">唐春明（广州大学）</td><td style="width: 335px;">郑东（西安邮电大学）</td></tr>
                         </tbody>
                     </table>
-					<div class="section">
+					<div class="section1">
 					<p align="left">特邀嘉宾<br/></p>
 					</div>
 					<table class="tableizer-table">
