--- a/QPQC-2019.html
+++ b/QPQC-2019.html
@@ -192,7 +192,7 @@
 			                          }
 			                      </style>
 						<div class="section1">
-							<p align="left">第三届格与全同态加密国际前沿论坛日程<br/></p>
+							<p align="center">第三届格与全同态加密国际前沿论坛日程<br/></p>
 						</div>
 			                      <table class="tableizer-table" style="margin-top: -8%;">
 			                          <thead><tr class="tableizer-firstrow"><td>时间</td><td colspan="3">内容</td></tr></thead>
