--- a/SMPC-2018.html
+++ b/SMPC-2018.html
@@ -184,7 +184,7 @@
 						<tr><td>4月6日下午14:40-15:20</td><td>满足本地差分隐私的多方集合运算协议</td><td>朱友文（南京航空航天大学）</td></tr>
 						<tr><td>4月6日下午15:20-16:00</td><td>支持计算存储外包的隐私保护大数据挖掘系统</td><td>蒋琳（哈尔滨工业大学（深圳）</td></tr>
 						<tr><td>4月6日下午16:10-16:50</td><td>跨域大数据的理解、保护和交易</td><td>张兰（中国科学技术大学）</td></tr>
-						<tr><td>张兰（中国科学技术大学）</td><td>量子安全多方计算</td><td>刘文杰（南京信息工程大学）</td></tr>
+						<tr><td>4月6日下午17:00-17:40</td><td>量子安全多方计算</td><td>刘文杰（南京信息工程大学）</td></tr>
 						<tr><td>4月6日下午17:40-18:20</td><td>基于Yao混乱电路的高效安全两方计算技术</td><td>蒋瀚（山东大学）</td></tr>
 						<tr><td>4月7日上午</td><td>自由论坛</td><td></td></tr>
                         </tbody>
